--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
         </label>
         <label>
           <div class="order__details-number">
-            <input class="order__inputs" type="text" placeholder="+375 (__) ___ - __ - __" [(ngModel)]="formValues.phone">
+            <input class="order__inputs" type="text" placeholder="+375 (__) ___ - __ - __" prefix="+375 " mask="(00) 000 - 00 - 00" [(ngModel)]="formValues.phone">
           </div>
         </label>
         <div class="order__details-btn">
